# telos

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  migrations.rs
src/components/: AchieveGraph.tsx  AddHabitForm.tsx  BuildGraph.tsx  GraphChrome.tsx  HabitGraph.tsx  HabitManageRow.tsx  HabitRow.tsx  NonNegotiablesSidebar.tsx  QuitGraph.tsx  Sidebar.tsx  ThemeToggle.tsx  VerseWidget.tsx
src/lib/: catchup.ts  db.ts  queries.ts  streaks.ts  verses.ts
src/routes/: Habits.tsx  Home.tsx  Settings.tsx
src/store/: useAppStore.ts
src/styles/: fonts.css  globals.css  tokens.css
