[package]
name = "telos"
version = "0.1.0"
description = "Telos — a calm habit and goal tracker"
authors = ["Dhruv Patel"]
license = "MIT"
repository = "https://github.com/rkdhruv/telos"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "telos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
